--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>11</java.version>
-    <jadice.server.version>5.15.0.0</jadice.server.version>
-    <slf4j.version>2.0.13</slf4j.version>
+    <jadice.server.version>5.15.3.1</jadice.server.version>
+    <slf4j.version>2.0.17</slf4j.version>
     <jfreechart.version>1.5.5</jfreechart.version>
     <prefuse.version>beta-20130106</prefuse.version>
     <controlsfx.version>11.2.1</controlsfx.version>
@@ -31,12 +31,12 @@
     <commons-cli.version>1.9.0</commons-cli.version>
 
     <!-- Maven Plugins -->
-    <gmavenplus-plugin.version>4.0.1</gmavenplus-plugin.version>
+    <gmavenplus-plugin.version>4.1.1</gmavenplus-plugin.version>
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
     <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
     <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
-    <launch4j-maven-plugin.version>2.5.2</launch4j-maven-plugin.version>
-    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+    <launch4j-maven-plugin.version>2.5.3</launch4j-maven-plugin.version>
+    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -73,16 +73,6 @@
     <dependency>
       <groupId>com.levigo.jadice.server</groupId>
       <artifactId>libreoffice-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.levigo.jadice.server</groupId>
-      <artifactId>addon-callas-pdftoolbox-client</artifactId>
-      <version>${jadice.server.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.levigo.jadice.documentplatform.core</groupId>
-      <artifactId>jadice-format-xrechnung</artifactId>
-      <version>3.165.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.groovy</groupId>
@@ -290,6 +280,7 @@
               <headerType>gui</headerType>
               <outfile>target/${project.artifactId}-${project.version}.exe</outfile>
               <jar>target/${project.artifactId}-${project.version}-shaded.jar</jar>
+              <errTitle>converter client</errTitle>
               <icon>${basedir}/src/main/resources/icons/jadice-server.ico</icon>
               <cmdLine>-gui</cmdLine>
               <classPath>
@@ -302,7 +293,11 @@
                 <timeoutErr>true</timeoutErr>
               </splash>
               <jre>
-                <minVersion>1.8.0</minVersion>
+                <minVersion>11</minVersion>
+                <opts>
+                  <opt>--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED</opt>
+                  <opt>--add-opens=java.base/java.util=ALL-UNNAMED</opt>
+                </opts>
               </jre>
               <versionInfo>
                 <!--suppress UnresolvedMavenProperty -->
